--- a/styleGuide/demo/layout/flex/default.html
+++ b/styleGuide/demo/layout/flex/default.html
@@ -42,75 +42,75 @@
           <dd><span class="icon"></span> css3 정열 방법 (wrap) (IE 11) </dd>
 				</dl>
 				
-                <table class="table_col" summary="생성되는 class 설명">
-                  <caption>property 설명</caption>
-                  <colgroup>
-                    <col width="200">
-                    <col width="">
-                  </colgroup>
-                  <tbody>
-                    <tr>
-                      <th scope="col">property 이름</th>
-                      <th scope="col">property 설명</th>
-                    </tr>
-                    <tr>
-                      <td>flex-direction:[ <strong>row</strong>, column]</td>
-                      <td>
-                        정열 방향 성 (중심선)<br>
-                        - row : 가로 방향  (↔)<br>
-                        - column : 세로 방향 (↕)                         
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>flex-wrap: [ <strong>nowrap</strong>, wrap, wrap-reverse]</td>
-                      <td>
-                        "flex-direction"속성이 "row" 일대 유연함 적용<br>
-                        - nowrap : 유연함 적용안함, 줄바굼 되지 않도록함. <br>
-                        - wrap : 유연함 적용, 유연하게 항목 줄바꿈 <br>
-                        - wrap-reverse : 유연함 적용, "wrap" 반대로 줄바꿈
-                      </td>
-                    </tr>     
-                    <tr>
-                      <td>align-content: [ <strong>normal</strong>, center, flex-start, flex-end, space-around, space-between, stretch]</td>
-                      <td>
-                        "flex-direction" 중심 선 기준에따른 정열 방법<br>
-                        - center        : 중앙 정열 <br>
-                        - flex-start    : 시작점에서 부터 정열 <br>
-                        - flex-end      : 끝나는점에서 부터 정열 <br>
-                        - space-around  : 중심으로부터 아이템에 같은 여백을 줘서 정열 <br>
-                        - space-evenly  : 아이템 간격이 동일하게 정열 <br>
-                        - space-between : 중심 약끝으로 부터 정열 <br>
-                        - stretch       : 컨테이너 크기만큼 여백없이 정열 
-                      </td>
-                    </tr>
-                    
-                    <tr>
-                      <td>justify-content: [ <strong>normal</strong>, center, flex-start, flex-end, space-around, space-between, stretch]</td>
-                      <td>
-                        "flex-direction" 중심 선 반대 기준에따른 정열 방법<br>
-                        - center        : 중앙 정열 <br>
-                        - flex-start    : 시작점에서 부터 정열 <br>
-                        - flex-end      : 끝나는점에서 부터 정열 <br>
-                        - space-around  : 아이템에 같은 여백을 줘서 정열 <br>
-                        - space-evenly  : 아이템 간격이 동일하게 정열 <br>
-                        - space-between : 약끝으로 부터 정열 <br>
-                        - stretch       : 컨테이너 크기만큼 여백없이 정열 
-                      </td>
-                    </tr>          
-                    <tr>
-                      <td>align-items: [ <strong>normal</strong>, center, flex-start, flex-end, stretch, baseline]</td>
-                      <td>
-                        아이템 기준에서 정열 기준<br>
-                        - center        : 중앙 정열 <br>
-                        - flex-start    : 시작점에서 부터 정열 <br>
-                        - flex-end      : 끝나는점에서 부터 정열 <br>
-                        - stretch       : 컨테이너 크기만큼 여백없이 정열 <br>
-                        - baseline      : 텍스트기중
-                      </td>
-                    </tr>
+          <table class="table_col" summary="생성되는 class 설명">
+            <caption>property 설명</caption>
+            <colgroup>
+              <col width="200">
+              <col width="">
+            </colgroup>
+            <tbody>
+              <tr>
+                <th scope="col">property 이름</th>
+                <th scope="col">property 설명</th>
+              </tr>
+              <tr>
+                <td>flex-direction:[ <strong>row</strong>, column]</td>
+                <td>
+                  정열 방향 성 (중심선)<br>
+                  - row : 가로 방향  (↔)<br>
+                  - column : 세로 방향 (↕)                         
+                </td>
+              </tr>
+              <tr>
+                <td>flex-wrap: [ <strong>nowrap</strong>, wrap, wrap-reverse]</td>
+                <td>
+                  "flex-direction"속성이 "row" 일대 유연함 적용<br>
+                  - nowrap : 유연함 적용안함, 줄바굼 되지 않도록함. <br>
+                  - wrap : 유연함 적용, 유연하게 항목 줄바꿈 <br>
+                  - wrap-reverse : 유연함 적용, "wrap" 반대로 줄바꿈
+                </td>
+              </tr>     
+              <tr>
+                <td>align-content: [ <strong>normal</strong>, center, flex-start, flex-end, space-around, space-between, stretch]</td>
+                <td>
+                  "flex-direction" 중심 선 기준에따른 정열 방법<br>
+                  - center        : 중앙 정열 <br>
+                  - flex-start    : 시작점에서 부터 정열 <br>
+                  - flex-end      : 끝나는점에서 부터 정열 <br>
+                  - space-around  : 중심으로부터 아이템에 같은 여백을 줘서 정열 <br>
+                  - space-evenly  : 아이템 간격이 동일하게 정열 <br>
+                  - space-between : 중심 약끝으로 부터 정열 <br>
+                  - stretch       : 컨테이너 크기만큼 여백없이 정열 
+                </td>
+              </tr>
+              
+              <tr>
+                <td>justify-content: [ <strong>normal</strong>, center, flex-start, flex-end, space-around, space-between, stretch]</td>
+                <td>
+                  "flex-direction" 중심 선 반대 기준에따른 정열 방법<br>
+                  - center        : 중앙 정열 <br>
+                  - flex-start    : 시작점에서 부터 정열 <br>
+                  - flex-end      : 끝나는점에서 부터 정열 <br>
+                  - space-around  : 아이템에 같은 여백을 줘서 정열 <br>
+                  - space-evenly  : 아이템 간격이 동일하게 정열 <br>
+                  - space-between : 약끝으로 부터 정열 <br>
+                  - stretch       : 컨테이너 크기만큼 여백없이 정열 
+                </td>
+              </tr>          
+              <tr>
+                <td>align-items: [ <strong>normal</strong>, center, flex-start, flex-end, stretch, baseline]</td>
+                <td>
+                  아이템 기준에서 정열 기준<br>
+                  - center        : 중앙 정열 <br>
+                  - flex-start    : 시작점에서 부터 정열 <br>
+                  - flex-end      : 끝나는점에서 부터 정열 <br>
+                  - stretch       : 컨테이너 크기만큼 여백없이 정열 <br>
+                  - baseline      : 텍스트기중
+                </td>
+              </tr>
 
-                  </tbody>
-                </table>
+            </tbody>
+          </table>
 
 
 
@@ -137,7 +137,59 @@
 					<div class="api-body_h3 css">
                     <!-- 소스 -->
 
-                                          
+<!-- HTML generated using hilite.me --><div style="background: #272822; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><table><tr><td><pre style="margin: 0; line-height: 125%"> 1
+  2
+  3
+  4
+  5
+  6
+  7
+  8
+  9
+ 10
+ 11
+ 12
+ 13
+ 14
+ 15
+ 16
+ 17
+ 18
+ 19
+ 20
+ 21
+ 22
+ 23
+ 24
+ 25
+ 26</pre></td><td><pre style="margin: 0; line-height: 125%"><span style="color: #f92672">&lt;style </span><span style="color: #a6e22e">type=</span><span style="color: #e6db74">&quot;text/css&quot;</span><span style="color: #f92672">&gt;</span>
+   <span style="color: #f92672">body,</span> <span style="color: #f92672">html</span> <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">height</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">100</span><span style="color: #f92672">%</span><span style="color: #f8f8f2">;</span> <span style="color: #f8f8f2">}</span>
+ 
+   <span style="color: #a6e22e">.wrap</span> <span style="color: #f8f8f2">{</span> <span style="color: #f8f8f2">box</span><span style="color: #f92672">-</span><span style="color: #f8f8f2">sizing</span><span style="color: #f92672">:</span> <span style="color: #66d9ef">border</span><span style="color: #f92672">-</span><span style="color: #f8f8f2">box;</span> <span style="color: #66d9ef">height</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">50</span><span style="color: #f92672">%</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">margin</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">30px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">background-color</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">antiquewhite;</span>
+     <span style="color: #66d9ef">display</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">flex;</span>
+     <span style="color: #75715e">/* 중심선 방향  (row : ↔) (column : ↕ ) */</span>
+     <span style="color: #f8f8f2">flex</span><span style="color: #f92672">-</span><span style="color: #66d9ef">direction</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">row;</span>   
+     <span style="color: #f8f8f2">flex</span><span style="color: #f92672">-</span><span style="color: #f8f8f2">wrap</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">wrap;</span>
+     <span style="color: #75715e">/*</span>
+ <span style="color: #75715e">    </span>
+ <span style="color: #75715e">      - center        : 중앙 정열</span>
+ <span style="color: #75715e">      - flex-start    : 시작점에서 부터 정열</span>
+ <span style="color: #75715e">      - flex-end      : 끝나는점에서 부터 정열</span>
+ <span style="color: #75715e">      - space-around  : 중심으로부터 아이템에 같은 여백을 줘서 정열</span>
+ <span style="color: #75715e">      - space-evenly  : 아이템 간격이 동일하게 정열</span>
+ <span style="color: #75715e">      - space-between : 중심 약끝으로 부터 정열</span>
+ <span style="color: #75715e">      - stretch       : 컨테이너 크기만큼 여백없이 정열  </span>
+ <span style="color: #75715e">    </span>
+ <span style="color: #75715e">    */</span>
+     <span style="color: #f8f8f2">align</span><span style="color: #f92672">-</span><span style="color: #66d9ef">content</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">space</span><span style="color: #f92672">-</span><span style="color: #f8f8f2">around;</span>     
+     <span style="color: #66d9ef">justify</span><span style="color: #f92672">-</span><span style="color: #66d9ef">content</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">space</span><span style="color: #f92672">-</span><span style="color: #f8f8f2">around;</span>
+     <span style="color: #f8f8f2">align</span><span style="color: #f92672">-</span><span style="color: #f8f8f2">items</span><span style="color: #f92672">:</span> <span style="color: #66d9ef">normal</span>
+   <span style="color: #f8f8f2">}</span>
+   <span style="color: #75715e">/* 아이템 width는 최소값으로 반영된다고 보면 됩니다. */</span>
+   <span style="color: #a6e22e">.wrap</span> <span style="color: #a6e22e">.item</span> <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">width</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">30</span><span style="color: #f92672">%</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">min-height</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">30px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">outline</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">1px</span> <span style="color: #66d9ef">solid</span> <span style="color: #ae81ff">#f73</span><span style="color: #f8f8f2">;</span> <span style="color: #f8f8f2">}</span>
+ <span style="color: #f92672">&lt;/style&gt;</span>
+ </pre></td></tr></table></div>
+                                           
 
                     <!-- //소스 -->
 					</div>
@@ -150,7 +202,27 @@
 					<div class="api-body_h3 html">
                     <!-- 소스 -->
 
-                                                                        
+
+                    
+<!-- HTML generated using hilite.me --><div style="background: #272822; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><table><tr><td><pre style="margin: 0; line-height: 125%">1
+  2
+  3
+  4
+  5
+  6
+  7
+  8
+  9</pre></td><td><pre style="margin: 0; line-height: 125%">  <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;wrap&quot;</span><span style="color: #f92672">&gt;</span>
+  
+      <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;item&quot;</span><span style="color: #f92672">&gt;</span>a<span style="color: #f92672">&lt;/div&gt;</span>    
+      <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;item&quot;</span><span style="color: #f92672">&gt;</span>b<span style="color: #f92672">&lt;/div&gt;</span>    
+      <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;item&quot;</span><span style="color: #f92672">&gt;</span>c<span style="color: #f92672">&lt;/div&gt;</span>    
+      <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;item&quot;</span><span style="color: #f92672">&gt;</span>d<span style="color: #f92672">&lt;/div&gt;</span>    
+      <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;item&quot;</span><span style="color: #f92672">&gt;</span>e<span style="color: #f92672">&lt;/div&gt;</span>    
+  
+    <span style="color: #f92672">&lt;/div&gt;</span>
+  </pre></td></tr></table></div>
+                                                                          
                                                                                                                                                                                     
                     
                     <!-- //소스 -->
