--- a/styleGuide/demo/layout/flex/default.html
+++ b/styleGuide/demo/layout/flex/default.html
@@ -117,9 +117,9 @@
 <!-- ===VIEW=== -->	            
 				<div class="ex_wapper">
 					<h3 class="api-title_h3">VIEW</h3>
-					<p class="ex-more"><a href="javascript:return false;"><span class="d-n">+</span><span style="display: inline;">-</span></a></p>
+					<!-- <p class="ex-more"><a href="javascript:return false;"><span class="d-n">+</span><span style="display: inline;">-</span></a></p> -->
 					<p class="ex-view"><a href="ex01.html" target="_blank">View Sample</a></p>
-					<div class="ex-body d-n" >
+					<!-- <div class="ex-body d-n" > -->
                     <!-- 소스 -->
                 
 
@@ -127,7 +127,7 @@
 	
                     
                     <!-- //소스 -->        
-					</div>
+					<!-- </div> -->
 				</div>
 				
 
