--- a/scriptLibrary/demo/layout/scrollPositionFn/default.html
+++ b/scriptLibrary/demo/layout/scrollPositionFn/default.html
@@ -66,6 +66,25 @@
 					</tbody>
 				</table>
 			
+				<table class="table_col" summary="생성되는 method 설명">
+					<caption>method 설명</caption>
+					<colgroup>
+						<col width="150">
+						<col width="">		
+					</colgroup>
+					<tbody>
+					<tr>
+						<th scope="col">method 이름</th>
+						<th scope="col">method 설명</th>
+					</tr>
+					<tr>
+						<td>setTarModi(가감수치)</td>
+						<td>타겟의 가감 수치 수시변경
+						</td>		
+					</tr>
+					</tbody>
+				</table>
+			
 		
 			</div>
 		</div>
