time counter 추가

--- a/scriptLibrary/demo/layout/scrollActive/default.html
+++ b/scriptLibrary/demo/layout/scrollActive/default.html
@@ -68,7 +68,8 @@
 				<p class="ex-more" ><a href="javascript:return false;"><span>+</span><span style="display:none" >-</span></a></p>
 				<p class="ex-view" ><a href="ex01.html" target="_blank">View</a></p>
 				<div class="ex-body" style="display:none" >					
-					<div class="source"><!-- 소스 -->
+					<div class="source">
+						<!-- 소스 -->
 					
 
 
@@ -178,9 +179,10 @@
 
 
 
+ 					<!--// 소스 -->
+					</div>
+				</div>
 				
-					</div><!--// 소스 -->
-                </div>
 			</div>			
 		</div>
 		<!-- e: examples 예제 -->
