--- a/scriptLibrary/demo/layout/colItmeH/ex02.html
+++ b/scriptLibrary/demo/layout/colItmeH/ex02.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" id="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,initial-scale=1.0">
 <title>trpColItemH</title>
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js" charset="UTF-8"></script>
 <script type="text/javascript" src="../../../../asset/js/libs/trpLayout.js"></script>
 <style type="text/css">
   .txt_box-list { position: relative; max-width: 1200px; margin: 0 auto; list-style: none; padding: 0;}
