반응형 테이블

--- a/asset/css/trpBase.css
+++ b/asset/css/trpBase.css
@@ -620,42 +620,42 @@ a:link, a:visited{ cursor: pointer; }
 
 
 /** ================= responsive ================= **/
-  .trp.table-data-type1 {  /* border-collapse: collapse; */ border-spacing: 0; width:100%; max-width: 100%; border-top: 2px solid #000; text-align:center;  box-sizing: border-box; }
-  .trp.table-data-type1 thead th { height: 38px; padding: 4px 5px 3px 5px; 
+  .trp.table-data-type_re {  /* border-collapse: collapse; */ border-spacing: 0; width:100%; max-width: 100%; border-top: 2px solid #000; text-align:center;  box-sizing: border-box; }
+  .trp.table-data-type_re thead th { height: 38px; padding: 4px 5px 3px 5px; 
     border-bottom: 1px solid #d9d9d9;      border-right: 1px solid #efefef;
     font-size: 13px; background-color: #f6f6f6; }
-  .trp.table-data-type1 tbody th { height: 38px; padding: 4px 5px 3px 5px; 
+  .trp.table-data-type_re tbody th { height: 38px; padding: 4px 5px 3px 5px; 
     border-right: 1px solid #efefef;     
     border-bottom: 1px solid #e5e5e5; 
     font-size: 13px; background-color: #f6f6f6; }
-  .trp.table-data-type1 thead th:last-child,  
-  .trp.table-data-type1 tbody th:last-child,
-  .trp.table-data-type1 tbody td:last-child { border-right: 0px} 
-  .trp.table-data-type1 tbody td { height: 35px; padding: 4px 5px 3px 5px; border-right: 1px solid #efefef; border-bottom: 1px solid #e5e5e5; font-size: 13px; 
+  .trp.table-data-type_re thead th:last-child,  
+  .trp.table-data-type_re tbody th:last-child,
+  .trp.table-data-type_re tbody td:last-child { border-right: 0px} 
+  .trp.table-data-type_re tbody td { height: 35px; padding: 4px 5px 3px 5px; border-right: 1px solid #efefef; border-bottom: 1px solid #e5e5e5; font-size: 13px; 
       overflow: hidden;text-overflow: ellipsis;white-space: nowrap;word-wrap: normal;
   }
-  .trp.table-data-type1 tbody td.tit { padding-left: 50px; text-align: left; }
-  .trp.table-data-type1 tbody td .txt-box { text-align: left; margin-left: 5px }
-  .trp.table-data-type1 tbody td .radio-box { text-align: left; margin-left: 5px }
-  .trp.table-data-type1 tbody td .txt-box { text-align: left; margin-right: 5px }
-  .trp.table-data-type1 .bd-r { border-right: 1px solid #e5e5e5; }
-  .trp.table-data-type1 .bd-l { border-left: 1px solid #e5e5e5; }
-  .trp.table-data-type1 .bd-t { border-top: 1px solid #e5e5e5; }
-  .trp.table-data-type1 .bd-b { border-bottom: 1px solid #e5e5e5; }
-  .trp.table-data-type1 .bd-rn { border-right: none; }
-  .trp.table-data-type1 .bd-ln { border-left: none; }
-  .trp.table-data-type1 .bd-tn { border-top: none; }
-  .trp.table-data-type1 .bd-bn { border-bottom: none; }
+  .trp.table-data-type_re tbody td.tit { padding-left: 50px; text-align: left; }
+  .trp.table-data-type_re tbody td .txt-box { text-align: left; margin-left: 5px }
+  .trp.table-data-type_re tbody td .radio-box { text-align: left; margin-left: 5px }
+  .trp.table-data-type_re tbody td .txt-box { text-align: left; margin-right: 5px }
+  .trp.table-data-type_re .bd-r { border-right: 1px solid #e5e5e5; }
+  .trp.table-data-type_re .bd-l { border-left: 1px solid #e5e5e5; }
+  .trp.table-data-type_re .bd-t { border-top: 1px solid #e5e5e5; }
+  .trp.table-data-type_re .bd-b { border-bottom: 1px solid #e5e5e5; }
+  .trp.table-data-type_re .bd-rn { border-right: none; }
+  .trp.table-data-type_re .bd-ln { border-left: none; }
+  .trp.table-data-type_re .bd-tn { border-top: none; }
+  .trp.table-data-type_re .bd-bn { border-bottom: none; }
 
 
   .table-responsive_scroll { min-height: .01%; overflow-x: auto; white-space: nowrap;  -webkit-overflow-scrolling: touch; }
   @media screen and (max-width: 767px){
-    .table-responsive_2col .trp.table-data-type1 { border-top: 0; }
-    .table-responsive_2col .trp.table-data-type1 thead { display: none; }
-    .table-responsive_2col .trp.table-data-type1 td.mb-none { display: none; }
-    .table-responsive_2col .trp.table-data-type1 td.topbr {  border-top: 2px solid #000; }
-    .table-responsive_2col .trp.table-data-type1 td { position: relative; display: block; padding: 8px 5px 8px 5px;  /* padding-left:  105px; */ text-align: left; box-sizing: border-box; border-right: 0; }
-    .table-responsive_2col .trp.table-data-type1 td:before { content: attr(data-th) "";    
+    .table-responsive_2col .trp.table-data-type_re { border-top: 0; }
+    .table-responsive_2col .trp.table-data-type_re thead { display: none; }
+    .table-responsive_2col .trp.table-data-type_re td.mb-none { display: none; }
+    .table-responsive_2col .trp.table-data-type_re td.topbr {  border-top: 2px solid #000; }
+    .table-responsive_2col .trp.table-data-type_re td { position: relative; display: block; padding: 8px 5px 8px 5px;  /* padding-left:  105px; */ text-align: left; box-sizing: border-box; border-right: 0; }
+    .table-responsive_2col .trp.table-data-type_re td:before { content: attr(data-th) "";    
       /*  display: block;  position: absolute; top:0; left: 0;  padding: 6px 5px 8px 5px; height: 35px; box-sizing: border-box;  background-color: #f6f6f6; */
       font-weight: bold; width:100px; display: inline-block; text-align: left;
       overflow: hidden;text-overflow: ellipsis;white-space: nowrap;word-wrap: normal;
