--- a/scriptLibrary/demo/layout/scrollSync/ex01.html
+++ b/scriptLibrary/demo/layout/scrollSync/ex01.html
@@ -5,7 +5,7 @@
 	<title>trpScrollSync</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" type="text/css"  href="../../../../asset/css/trpBase.css" media="all" />
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.12.1.min.js" ></script>
+	<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js" ></script>
 	<script type="text/javascript" src="../../../../asset/js/libs/trpLayout.js" ></script>
 </head>
 
