trpScrollSyncTop, trpScrollActive 추가 적용

--- a/scriptLibrary/demo/layout/scrollSync/default.html
+++ b/scriptLibrary/demo/layout/scrollSync/default.html
@@ -79,6 +79,49 @@
 					</tr>	
 					</tbody>
 				</table>
+
+				<table class="table_col" summary="생성되는 class 설명">
+					<caption>method 설명</caption>
+					<colgroup>
+						<col width="150">
+						<col width="">		
+					</colgroup>
+					<tbody>
+					<tr>
+						<th scope="col">method 이름</th>
+						<th scope="col">method 설명</th>
+					</tr>
+					<tr>
+						<td>setMaxWidth</td>
+						<td>컨테이너 넓이                (기본값 : window.innerWidth)
+						</td>		
+					</tr>
+					<tr>
+						<td>setWidthTar</td>
+						<td>적용할 타켓 넓이값 (기본값 : this.width)
+						</td>		
+					</tr><tr>
+						<td>setHeightTar</td>
+						<td>적용할 타켓 높이값 (기본값 : this.height)
+						</td>		
+					</tr>
+					<tr>
+						<td>setShowHeight</td>
+						<td>적용할 타켓 상단으로 부터 보여질 위치 (기본값 : $(window).height)
+						</td>		
+					</tr>
+					<tr>
+						<td>setBottonTar</td>
+						<td>적용할 타겟 하단으로 부터 여백 (기본값 : 50)
+						</td>		
+					</tr>	
+					<tr>
+						<td>setBottomStop</td>
+						<td>적용할 타겟 하단기준 멈춰야할 위치 (기본값 : 100)
+						</td>		
+					</tr>	
+					</tbody>
+				</table>
 			
 		
 			</div>
