예제 jQuery 경로 변경

--- a/jqueryPlugin/demo/layout/fullPage/ex01.html
+++ b/jqueryPlugin/demo/layout/fullPage/ex01.html
@@ -10,7 +10,7 @@
 			 var console = { log: function() {} };
 		</script>
 	<![endif]-->
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" ></script>
+	<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
 	<script type="text/javascript" src="../../../../asset/js/libs/fullPage/jquery.fullPage.js"></script>
 	
 
