--- a/jqueryPlugin/demo/layout/masonry/ex01.html
+++ b/jqueryPlugin/demo/layout/masonry/ex01.html
@@ -33,7 +33,7 @@
 	   .stamp2 { right:10%; top:20px; width:70%; height:30px; } 
  </style>
  
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" ></script>
+<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
 <script src="../../../../asset/js/libs/masonry-master/masonry.pkgd.js" ></script>
 
 <script type="text/javascript">
