--- a/jqueryPlugin/demo/layout/stickyfill/ex-01.html
+++ b/jqueryPlugin/demo/layout/stickyfill/ex-01.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="msapplication-tap-highlight" content="no">
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" ></script>
+  <script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
     <script src="../../../../asset/js/libs/stickyfill/stickyfill.js" ></script>
 
     <style>
