--- a/scriptLibrary/demo/layout/box/ex_InfinityScroll.html
+++ b/scriptLibrary/demo/layout/box/ex_InfinityScroll.html
@@ -10,7 +10,7 @@
 	.list_wrap li { height:30px; padding-top:15px;  font-size:20px;  border-bottom:1px solid #ccc; }
 
   </style>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" ></script>
+	<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
 	<script type="text/javascript">
 			$(document).ready(function(){
 					
