--- a/asset/css/trpBase.css
+++ b/asset/css/trpBase.css
@@ -531,11 +531,11 @@ a:link, a:visited{ cursor: pointer; }
 
 /** trp_waves  **/
 .trp_waves { position: relative;overflow: hidden; 
-    padding: 15px 40px;
-    font-size: 22px;color: white;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, .4);
-    border: none;background: #000;
-    cursor: pointer;
+  padding: 15px 40px;
+  font-size: 22px;color: white;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, .4);
+  border: none;background: #000;
+  cursor: pointer;
 }
 .trp_waves:after {content: '';position: absolute;top: 50%;left: 50%;
     width: 5px;height: 5px;
@@ -546,15 +546,34 @@ a:link, a:visited{ cursor: pointer; }
     transform-origin: 50% 50%;
 }
 @keyframes trp_ripple {
-    0%   {transform: scale(0, 0);opacity: 1;}
-    20%  {transform: scale(25, 25);opacity: 1;}
-    100% {opacity: 0;transform: scale(40, 40);}
+  0%   {transform: scale(0, 0);opacity: 1;}
+  20%  {transform: scale(25, 25);opacity: 1;}
+  100% {opacity: 0;transform: scale(40, 40);}
 }
 /* event hover */
 .trp_waves.event_hover:hover::after {animation: trp_ripple 1s ease-out;}
 
 /* event click */
 .trp_waves.event_click:focus:not(:active)::after {animation: trp_ripple 1s ease-out;}
+
+/** trp_underline  **/
+.trp_underline { position: relative; }
+.trp_underline:after { content: "";
+  position: absolute; right: 0; bottom:5px; width: 0;
+  height: 1px; background: #1e1e1e;
+  -khtml-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;    
+}
+.trp_underline:hover:after { width: 100%; left: 0; }
+
+.trp_underline.btn_type { display: inline-block; padding: 5px 10px;
+  text-decoration: none; color:#000;
+}
+
+
 
 
 
