--- a/scriptLibrary/demo/layout/scrollPositionFn/default.html
+++ b/scriptLibrary/demo/layout/scrollPositionFn/default.html
@@ -57,9 +57,9 @@
 						</td>		
 					</tr>
 					<tr>
-						<td>$functionChange($b)</td>
+						<td>$functionChange("under" | "over" | "pass" , this)</td>
 						<td>
-						  실행함수 $function( over:true | under:false )
+						  실행함수 $function( "under" | "over" | "pass" , this )	
 						</td>		
 					</tr>
 							
