--- a/scriptLibrary/demo/layout/scrollPositionFn/ex01.html
+++ b/scriptLibrary/demo/layout/scrollPositionFn/ex01.html
@@ -7,7 +7,9 @@
         #container { position: relative;height:2000px; background-color: aquamarine;  }
         #container .position_org { position: absolute; top: 400px; width: 100%; height: 100px; background-color: blueviolet; }
         #container .position_target { position: absolute; top: 500px; width: 100%; height: 100px; background-color: brown; }
-        #container.scoll_in {  background-color: olivedrab;  }
+        #container .position_target.under { background-color: #300;  }
+        #container .position_target.over  { background-color: #700;  }
+        #container .position_target.pass  { background-color: #a00;  }
 	</style> 
 	<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
 	<script type="text/javascript" src="../../../../asset/js/libs/trpLayout.js"></script>
@@ -15,20 +17,21 @@
 	
 	$(document).ready(function(){
     /*
-       (기준 타겟 위치 선택자, 기준 타겟 위치 가감 수치, 적용 타겟 선택자, 적용 타겟 class 이름)
+      (기준 타겟 위치 선택자, 기준 타겟 위치 가감 수치, 적용 타겟 선택자, 적용 타겟 class 이름)
     */
-      var trpSPF = $(window).trpScrollPositionFn(".position_target" , -100 , function($b){
-        if($b){ //over
-          console.log("over>>");
-          $("#container").addClass("scoll_in")
-        }else{  // under
-          console.log("under>>");
-          $("#container").removeClass("scoll_in")
-        }
+      var trpSPF = $(window).trpScrollPositionFn(".position_target" , -100 , function($state, $this){
+        $($this).removeClass("over pass under");
+        if($state == "over"){        // over
+          $($this).addClass("over");
+				}else if($state == "pass"){  // pass
+					$($this).addClass("pass");
+				}else {
+					$($this).addClass("under");// under
+				}
       });
       
       /* 기준 타겟 위치 가감 수치 변경 */
-         setTimeout(function(){ trpSPF.setTarModi( -200 ) }, 5000);
+      setTimeout(function(){ trpSPF.setTarModi( -200 ) }, 5000);
 	})
         
 	</script>
