--- a/scriptLibrary/demo/layout/scrollPositionFn/default.html
+++ b/scriptLibrary/demo/layout/scrollPositionFn/default.html
@@ -102,93 +102,107 @@
 
 
 
-
 <!-- HTML generated using hilite.me --><div style="background: #272822; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><table><tr><td><pre style="margin: 0; line-height: 125%"> 1
- 2
- 3
- 4
- 5
- 6
- 7
- 8
- 9
-10
-11
-12
-13
-14
-15
-16
-17
-18
-19
-20
-21
-22
-23
-24
-25
-26
-27
-28
-29
-30
-31
-32
-33
-34
-35
-36
-37
-38
-39
-40
-41
-42
-43</pre></td><td><pre style="margin: 0; line-height: 125%"><span style="color: #75715e">&lt;!DOCTYPE html&gt;</span>
-<span style="color: #f92672">&lt;html&gt;</span>
-<span style="color: #f92672">&lt;head&gt;</span>
-	<span style="color: #f92672">&lt;meta</span> <span style="color: #a6e22e">charset=</span><span style="color: #e6db74">&quot;UTF-8&quot;</span><span style="color: #f92672">&gt;</span>
-	<span style="color: #f92672">&lt;style&gt;</span>
-        <span style="color: #a6e22e">#header</span>     <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">height</span><span style="color: #f92672">:</span><span style="color: #ae81ff">200px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">background-color</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">darkgray;</span> <span style="color: #f8f8f2">}</span>
-        <span style="color: #a6e22e">#container</span> <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">position</span><span style="color: #f92672">:</span> <span style="color: #66d9ef">relative</span><span style="color: #f8f8f2">;</span><span style="color: #66d9ef">height</span><span style="color: #f92672">:</span><span style="color: #ae81ff">2000px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">background-color</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">aquamarine;</span>  <span style="color: #f8f8f2">}</span>
-        <span style="color: #a6e22e">#container</span> <span style="color: #a6e22e">.position_org</span> <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">position</span><span style="color: #f92672">:</span> <span style="color: #66d9ef">absolute</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">top</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">400px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">width</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">100</span><span style="color: #f92672">%</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">height</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">100px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">background-color</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">blueviolet;</span> <span style="color: #f8f8f2">}</span>
-        <span style="color: #a6e22e">#container</span> <span style="color: #a6e22e">.position_target</span> <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">position</span><span style="color: #f92672">:</span> <span style="color: #66d9ef">absolute</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">top</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">500px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">width</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">100</span><span style="color: #f92672">%</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">height</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">100px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">background-color</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">brown;</span> <span style="color: #f8f8f2">}</span>
-        <span style="color: #a6e22e">#container.scoll_in</span> <span style="color: #f8f8f2">{</span>  <span style="color: #66d9ef">background-color</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">olivedrab;</span>  <span style="color: #f8f8f2">}</span>
-	<span style="color: #f92672">&lt;/style&gt;</span> 
-	<span style="color: #f92672">&lt;script </span><span style="color: #a6e22e">src=</span><span style="color: #e6db74">&quot;http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js&quot;</span><span style="color: #f92672">&gt;&lt;/script&gt;</span>
-	<span style="color: #f92672">&lt;script </span><span style="color: #a6e22e">type=</span><span style="color: #e6db74">&quot;text/javascript&quot;</span> <span style="color: #a6e22e">src=</span><span style="color: #e6db74">&quot;../../../../asset/js/libs/trpLayout.js&quot;</span><span style="color: #f92672">&gt;&lt;/script&gt;</span>
-	<span style="color: #f92672">&lt;script&gt;</span>
-	
-	<span style="color: #a6e22e">$</span><span style="color: #f8f8f2">(document).</span><span style="color: #a6e22e">ready</span><span style="color: #f8f8f2">(</span><span style="color: #66d9ef">function</span><span style="color: #f8f8f2">(){</span>
-    <span style="color: #75715e">/*</span>
-<span style="color: #75715e">       (기준 타겟 위치 선택자, 기준 타겟 위치 가감 수치, 적용 타겟 선택자, 적용 타겟 class 이름)</span>
-<span style="color: #75715e">    */</span>
-		<span style="color: #a6e22e">$</span><span style="color: #f8f8f2">(window).</span><span style="color: #a6e22e">trpScrollPositionFn</span><span style="color: #f8f8f2">(</span><span style="color: #e6db74">&quot;.position_target&quot;</span> <span style="color: #f8f8f2">,</span> <span style="color: #f92672">-</span><span style="color: #ae81ff">100</span> <span style="color: #f8f8f2">,</span> <span style="color: #66d9ef">function</span><span style="color: #f8f8f2">(</span><span style="color: #a6e22e">$b</span><span style="color: #f8f8f2">){</span>
-      <span style="color: #66d9ef">if</span><span style="color: #f8f8f2">(</span><span style="color: #a6e22e">$b</span><span style="color: #f8f8f2">){</span> <span style="color: #75715e">//over</span>
-        <span style="color: #a6e22e">console</span><span style="color: #f8f8f2">.</span><span style="color: #a6e22e">log</span><span style="color: #f8f8f2">(</span><span style="color: #e6db74">&quot;over&gt;&gt;&quot;</span><span style="color: #f8f8f2">);</span>
-      <span style="color: #f8f8f2">}</span><span style="color: #66d9ef">else</span><span style="color: #f8f8f2">{</span>  <span style="color: #75715e">// under</span>
-        <span style="color: #a6e22e">console</span><span style="color: #f8f8f2">.</span><span style="color: #a6e22e">log</span><span style="color: #f8f8f2">(</span><span style="color: #e6db74">&quot;under&gt;&gt;&quot;</span><span style="color: #f8f8f2">);</span>
-      <span style="color: #f8f8f2">}</span>
-    <span style="color: #f8f8f2">});</span>
-        
-	<span style="color: #f8f8f2">})</span>
-        
-	<span style="color: #f92672">&lt;/script&gt;</span>
-	
-<span style="color: #f92672">&lt;/head&gt;</span>
-<span style="color: #f92672">&lt;body&gt;</span>
-	
-   <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">id=</span><span style="color: #e6db74">&quot;header&quot;</span><span style="color: #f92672">&gt;</span>header<span style="color: #f92672">&lt;/div&gt;</span>
-   <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">id=</span><span style="color: #e6db74">&quot;container&quot;</span><span style="color: #f92672">&gt;</span>
-       <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_org&quot;</span><span style="color: #f92672">&gt;</span> ching line <span style="color: #f92672">&lt;/div&gt;</span>
-       <span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_target&quot;</span><span style="color: #f92672">&gt;</span>(position_target - 100)<span style="color: #f92672">&lt;/div&gt;</span>
-   <span style="color: #f92672">&lt;/div&gt;</span>
-
+	2
+	3
+	4
+	5
+	6
+	7
+	8
+	9
+ 10
+ 11
+ 12
+ 13
+ 14
+ 15
+ 16
+ 17
+ 18
+ 19
+ 20
+ 21
+ 22
+ 23
+ 24
+ 25
+ 26
+ 27
+ 28
+ 29
+ 30
+ 31
+ 32
+ 33
+ 34
+ 35
+ 36
+ 37
+ 38
+ 39
+ 40
+ 41
+ 42
+ 43
+ 44
+ 45
+ 46
+ 47
+ 48
+ 49
+ 50</pre></td><td><pre style="margin: 0; line-height: 125%"><span style="color: #75715e">&lt;!DOCTYPE html&gt;</span>
+ <span style="color: #f92672">&lt;html&gt;</span>
+ <span style="color: #f92672">&lt;head&gt;</span>
+	 <span style="color: #f92672">&lt;meta</span> <span style="color: #a6e22e">charset=</span><span style="color: #e6db74">&quot;UTF-8&quot;</span><span style="color: #f92672">&gt;</span>
+	 <span style="color: #f92672">&lt;style&gt;</span>
+		 <span style="color: #a6e22e">#header</span>     <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">height</span><span style="color: #f92672">:</span><span style="color: #ae81ff">200px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">background-color</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">darkgray;</span> <span style="color: #f8f8f2">}</span>
+		 <span style="color: #a6e22e">#container</span> <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">position</span><span style="color: #f92672">:</span> <span style="color: #66d9ef">relative</span><span style="color: #f8f8f2">;</span><span style="color: #66d9ef">height</span><span style="color: #f92672">:</span><span style="color: #ae81ff">2000px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">background-color</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">aquamarine;</span>  <span style="color: #f8f8f2">}</span>
+		 <span style="color: #a6e22e">#container</span> <span style="color: #a6e22e">.position_org</span> <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">position</span><span style="color: #f92672">:</span> <span style="color: #66d9ef">absolute</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">top</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">400px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">width</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">100</span><span style="color: #f92672">%</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">height</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">100px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">background-color</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">blueviolet;</span> <span style="color: #f8f8f2">}</span>
+		 <span style="color: #a6e22e">#container</span> <span style="color: #a6e22e">.position_target</span> <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">position</span><span style="color: #f92672">:</span> <span style="color: #66d9ef">absolute</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">top</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">500px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">width</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">100</span><span style="color: #f92672">%</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">height</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">100px</span><span style="color: #f8f8f2">;</span> <span style="color: #66d9ef">background-color</span><span style="color: #f92672">:</span> <span style="color: #f8f8f2">brown;</span> <span style="color: #f8f8f2">}</span>
+		 <span style="color: #a6e22e">#container</span> <span style="color: #a6e22e">.position_target.under</span> <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">background-color</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">#300</span><span style="color: #f8f8f2">;</span>  <span style="color: #f8f8f2">}</span>
+		 <span style="color: #a6e22e">#container</span> <span style="color: #a6e22e">.position_target.over</span>  <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">background-color</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">#700</span><span style="color: #f8f8f2">;</span>  <span style="color: #f8f8f2">}</span>
+		 <span style="color: #a6e22e">#container</span> <span style="color: #a6e22e">.position_target.pass</span>  <span style="color: #f8f8f2">{</span> <span style="color: #66d9ef">background-color</span><span style="color: #f92672">:</span> <span style="color: #ae81ff">#a00</span><span style="color: #f8f8f2">;</span>  <span style="color: #f8f8f2">}</span>
+	 <span style="color: #f92672">&lt;/style&gt;</span> 
+	 <span style="color: #f92672">&lt;script </span><span style="color: #a6e22e">type=</span><span style="color: #e6db74">&quot;text/javascript&quot;</span> <span style="color: #a6e22e">src=</span><span style="color: #e6db74">&quot;../../../../asset/js/libs/jquery-1.12.1.min.js&quot;</span><span style="color: #f92672">&gt;&lt;/script&gt;</span>
+	 <span style="color: #f92672">&lt;script </span><span style="color: #a6e22e">type=</span><span style="color: #e6db74">&quot;text/javascript&quot;</span> <span style="color: #a6e22e">src=</span><span style="color: #e6db74">&quot;../../../../asset/js/libs/trpLayout.js&quot;</span><span style="color: #f92672">&gt;&lt;/script&gt;</span>
+	 <span style="color: #f92672">&lt;script&gt;</span>
+	 
+	 <span style="color: #a6e22e">$</span><span style="color: #f8f8f2">(document).</span><span style="color: #a6e22e">ready</span><span style="color: #f8f8f2">(</span><span style="color: #66d9ef">function</span><span style="color: #f8f8f2">(){</span>
+		 <span style="color: #75715e">/*</span>
+ <span style="color: #75715e">      (기준 타겟 위치 선택자, 기준 타겟 위치 가감 수치, 적용 타겟 선택자, 적용 타겟 class 이름)</span>
+ <span style="color: #75715e">    */</span>
+			 <span style="color: #66d9ef">var</span> <span style="color: #a6e22e">trpSPF</span> <span style="color: #f92672">=</span> <span style="color: #a6e22e">$</span><span style="color: #f8f8f2">(window).</span><span style="color: #a6e22e">trpScrollPositionFn</span><span style="color: #f8f8f2">(</span><span style="color: #e6db74">&quot;.position_target&quot;</span> <span style="color: #f8f8f2">,</span> <span style="color: #f92672">-</span><span style="color: #ae81ff">100</span> <span style="color: #f8f8f2">,</span> <span style="color: #66d9ef">function</span><span style="color: #f8f8f2">(</span><span style="color: #a6e22e">$state</span><span style="color: #f8f8f2">,</span> <span style="color: #a6e22e">$this</span><span style="color: #f8f8f2">){</span>
+				 <span style="color: #a6e22e">$</span><span style="color: #f8f8f2">(</span><span style="color: #a6e22e">$this</span><span style="color: #f8f8f2">).</span><span style="color: #a6e22e">removeClass</span><span style="color: #f8f8f2">(</span><span style="color: #e6db74">&quot;over pass under&quot;</span><span style="color: #f8f8f2">);</span>
+				 <span style="color: #66d9ef">if</span><span style="color: #f8f8f2">(</span><span style="color: #a6e22e">$state</span> <span style="color: #f92672">==</span> <span style="color: #e6db74">&quot;over&quot;</span><span style="color: #f8f8f2">){</span>        <span style="color: #75715e">// over</span>
+					 <span style="color: #a6e22e">$</span><span style="color: #f8f8f2">(</span><span style="color: #a6e22e">$this</span><span style="color: #f8f8f2">).</span><span style="color: #a6e22e">addClass</span><span style="color: #f8f8f2">(</span><span style="color: #e6db74">&quot;over&quot;</span><span style="color: #f8f8f2">);</span>
+				 <span style="color: #f8f8f2">}</span><span style="color: #66d9ef">else</span> <span style="color: #66d9ef">if</span><span style="color: #f8f8f2">(</span><span style="color: #a6e22e">$state</span> <span style="color: #f92672">==</span> <span style="color: #e6db74">&quot;pass&quot;</span><span style="color: #f8f8f2">){</span>  <span style="color: #75715e">// pass</span>
+					 <span style="color: #a6e22e">$</span><span style="color: #f8f8f2">(</span><span style="color: #a6e22e">$this</span><span style="color: #f8f8f2">).</span><span style="color: #a6e22e">addClass</span><span style="color: #f8f8f2">(</span><span style="color: #e6db74">&quot;pass&quot;</span><span style="color: #f8f8f2">);</span>
+				 <span style="color: #f8f8f2">}</span><span style="color: #66d9ef">else</span> <span style="color: #f8f8f2">{</span>
+					 <span style="color: #a6e22e">$</span><span style="color: #f8f8f2">(</span><span style="color: #a6e22e">$this</span><span style="color: #f8f8f2">).</span><span style="color: #a6e22e">addClass</span><span style="color: #f8f8f2">(</span><span style="color: #e6db74">&quot;under&quot;</span><span style="color: #f8f8f2">);</span><span style="color: #75715e">// under</span>
+				 <span style="color: #f8f8f2">}</span>
+			 <span style="color: #f8f8f2">});</span>
+			 
+			 <span style="color: #75715e">/* 기준 타겟 위치 가감 수치 변경 */</span>
+			 <span style="color: #a6e22e">setTimeout</span><span style="color: #f8f8f2">(</span><span style="color: #66d9ef">function</span><span style="color: #f8f8f2">(){</span> <span style="color: #a6e22e">trpSPF</span><span style="color: #f8f8f2">.</span><span style="color: #a6e22e">setTarModi</span><span style="color: #f8f8f2">(</span> <span style="color: #f92672">-</span><span style="color: #ae81ff">200</span> <span style="color: #f8f8f2">)</span> <span style="color: #f8f8f2">},</span> <span style="color: #ae81ff">5000</span><span style="color: #f8f8f2">);</span>
+	 <span style="color: #f8f8f2">})</span>
+				 
+	 <span style="color: #f92672">&lt;/script&gt;</span>
+	 
+ <span style="color: #f92672">&lt;/head&gt;</span>
+ <span style="color: #f92672">&lt;body&gt;</span> 
+	 
+		<span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">id=</span><span style="color: #e6db74">&quot;header&quot;</span><span style="color: #f92672">&gt;</span>header<span style="color: #f92672">&lt;/div&gt;</span>
+		<span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">id=</span><span style="color: #e6db74">&quot;container&quot;</span><span style="color: #f92672">&gt;</span>
+				<span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_org&quot;</span><span style="color: #f92672">&gt;</span> ching line <span style="color: #f92672">&lt;/div&gt;</span>
+				<span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;position_target&quot;</span><span style="color: #f92672">&gt;</span>(position_target - 100)<span style="color: #f92672">&lt;/div&gt;</span>
+		<span style="color: #f92672">&lt;/div&gt;</span>
  
-<span style="color: #f92672">&lt;/body&gt;</span>
-<span style="color: #f92672">&lt;/html&gt;</span>
-</pre></td></tr></table></div>
+	
+ <span style="color: #f92672">&lt;/body&gt;</span>
+ <span style="color: #f92672">&lt;/html&gt;</span>
+ </pre></td></tr></table></div>
+ 
 
 
                 
