--- a/scriptLibrary/demo/layout/scrollActive/default.html
+++ b/scriptLibrary/demo/layout/scrollActive/default.html
@@ -56,6 +56,12 @@
 						</td>		
 					</tr>
 					<tr>
+						<td>$under_b</td>
+						<td>
+							못미쳤을때 초기화 여부 (false);
+						</td>		
+					</tr>
+					<tr>
 						<td>$pass_b</td>
 						<td>
 							지나첬을때 초기화 여부 (false);
