--- a/scriptLibrary/demo/layout/scrollActive/ex01.html
+++ b/scriptLibrary/demo/layout/scrollActive/ex01.html
@@ -7,8 +7,9 @@
   <style>
     html, body { padding: 0; margin: 0;}
     #header     { height:200px; background-color: darkgray; }
-    #container { position: relative;height:2000px; background-color: rosybrown;  }
-    #container .position_org { width: 100%; height: 100px; background-color: plum; }
+    #container { position: relative; height:2000px; background-color: rosybrown;  }
+    #container .text { position: fixed; top:10px; right: 10px; font-size: 15px; font-weight: bold;  }
+    #container .position_org    { width: 100%; height: 100px; background-color: plum; }
     #container .position_org_x4 { width: 100%; height: 400px; background-color: blueviolet; }
     #container .position_target { width: 100%; height: 500px; background-color: brown; }
     #container .position_target.addClass {  background-color: #0f0; }
@@ -16,21 +17,22 @@
 </head>
 <body>
 	
-   <div id="header">header</div>
+   <div id="header">header h200</div>
    <div id="container">
-      <div class="position_org_x4"> ching line </div>
-      <div class="position_org_x4"> ching line </div>
-      <div class="position_org_x4"> ching line </div>
-      <div class="position_target js-motion">500</div>
-      <div class="position_org_x4"> ching line </div>
-      <div class="position_org_x4"> ching line </div>
-      <div class="position_org_x4"> ching line </div>
-      <div class="position_target js-motion">500</div>
-      <div class="position_org_x4"> ching line </div>
-      <div class="position_org_x4"> ching line </div>
-      <div class="position_org_x4"> ching line </div>
-      <div class="position_target js-motion">500</div>
-      <div class="position_org_x4"> ching line </div>
+      <div class="text">0</div>
+      <div class="position_org_x4"> ching line 200 </div>
+      <div class="position_org_x4"> ching line 600</div>
+      <div class="position_org_x4"> ching line 1000</div>
+      <div class="position_target js-motion">1400</div>
+      <div class="position_org_x4"> ching line 1900</div>
+      <div class="position_org_x4"> ching line 2300</div>
+      <div class="position_org_x4"> ching line 2700</div>
+      <div class="position_target js-motion">3100</div>
+      <div class="position_org_x4"> ching line 3600</div>
+      <div class="position_org_x4"> ching line 4000</div>
+      <div class="position_org_x4"> ching line 4400</div>
+      <div class="position_target js-motion">4800</div>
+      <div class="position_org_x4"> ching line 5300</div>
       <div class="position_org_x4"> ching line </div>
       <div class="position_org_x4"> ching line </div>
       <div class="position_org_x4"> ching line </div>
@@ -40,7 +42,11 @@
    <script>
    	
     $(function(){
-        $(".js-motion").trpScrollActive( "addClass" , 1.0);
+      $(".js-motion").trpScrollActive( "addClass" , 1.0);
+
+      $(window).on('scroll resize', function($e){
+        $("#container .text").text( $(this).scrollTop() )
+      });
     })
  
   </script>
