--- a/asset/css/common.css
+++ b/asset/css/common.css
@@ -17,6 +17,7 @@ table { border-collapse:collapse; border-spacing:0; line-height:1.5}
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display:block; margin:0; padding:0;}  
 a:link, a:visited  { text-decoration:none; color:#333; }
 a:active, a:hover, a:focus { text-decoration:underline; }
+pre { tab-size: 4; }
 
 /* 공통:gnb-style */
 .ifr_cont { border-left:1px solid #505d8e; }
