--- a/scriptLibrary/demo/layout/scrollActiveFn/ex01.html
+++ b/scriptLibrary/demo/layout/scrollActiveFn/ex01.html
@@ -56,8 +56,7 @@
     $(function(){
       $(".js-motion").trpScrollActiveFn( function($this, $state){
         /// console.log( $this, $state );
-
-      }, .5);
+      }, .5, {upHold : true});
 
       $(window).on('scroll resize', function($e){
         $("#container .text").text( $(this).scrollTop() )
